Related posts - Fix overlap bug on 1col

--- a/scss/_screen-1col.scss
+++ b/scss/_screen-1col.scss
@@ -49,6 +49,11 @@ font-weight: 400;
 
 	/* ---------------- */
 
+	.crp_related a .crp_title {
+		display: block;
+	}
+
+
 	.container,
 	.navbar-static-top .container,
 	.navbar-fixed-top .container,
